# velowrite

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  INSTALL.md  README.md  RELEASE.md  ROADMAP.md  SECURITY.md  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts  文章计划.md
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  macos-dmg.yml
api/: api.test.js  feedback.js  loops.js  waitlist.js
docs/: FEEDBACK_ROADMAP.md  MARKDOWN_GUIDE.md  PRODUCT_HUNT_LAUNCH.md
public/: llms.txt  robots.txt  site.webmanifest  sitemap.xml
scripts/: build-markdown-guide-pdf.mjs  create-product-hunt-video.mjs  sync-version.mjs
src/: DemoCodeTabs.tsx  EditorApp.test.ts  EditorApp.tsx  RenderedMarkdownExample.tsx  main.tsx  markdown.test.ts  markdown.ts  sampleMarkdown.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
tests/e2e/: preview.spec.ts
